# tui-datamonkey

./: .env.example  .gitignore  .openapi-generator-ignore  AUTHENTICATION_FLOW.md  AUTHENTICATION_GUIDE.md  CODEGEN_STRATEGY.md  IMPLEMENTATION_PLAN.md  Makefile  PROGRESS.md  README.md  VEGA_EDITOR_INTEGRATION.md  openapi.yaml  pyproject.toml  requirements.txt
docs/: SETUP.md
src/datamonkey_tui/: __init__.py  __main__.py  app.py
src/datamonkey_tui/api/: __init__.py  client.py
src/datamonkey_tui/config/: __init__.py  session.py  settings.py
src/datamonkey_tui/screens/: __init__.py  chat.py  datasets.py  main.py  session.py  visualizations.py
src/datamonkey_tui/utils/: vega_editor.py
src/datamonkey_tui/widgets/: __init__.py
tests/: __init__.py
tests/test_api/: test_client.py
tests/test_screens/: test_authentication.py  test_imports.py  test_textarea_fix.py
tests/test_utils/: test_vega_editor.py
